# fastapi-postgre

./: Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  config.ini  config.local.ini  main.py  poetry.toml  pyproject.toml
backend/app/ai/agents/: __init__.py  base.py  qa_agent.py
backend/app/ai/enums/: __init__.py  agent.py  tool.py
backend/app/ai/prompts/: __init__.py  chat_prompts.py  highchart_prompts.py  report_prompts.py
backend/app/ai/schemas/: agent.py
backend/migrations/: env.py
backend/migrations/versions/: 2024_07_09_1059-0a443e731f60_new_migration.py  2024_07_15_0828-fde236c711bd_new_migration.py  2024_07_25_0158-06cea11e9d67_new_migration.py  2024_08_05_2326-7353787c3786_new_migration.py
backend/scripts/: start-backend.dev.sh
nginx/: default.conf
